# PAL_MACE

./: .gitignore  LICENSE  README.md  al_setting.py  cache_del.py  clean.sh  cleanup.py  config.yaml  environment.yaml  generate_al_setting.py  generate_config_yaml.py  install.sh  interface.py  main.py  main_org.py  optimized.csv  setup.py
install_tools/: install_photoMD.sh  install_pyNNsMD.sh  install_pyrai2MD.sh
kernel_example/NNsForMD/: pyproject.toml  retrain_eng.py
kernel_example/NNsForMD/pyNNsMD/layers/: features.py  mlp.py  normalize.py
kernel_example/NNsForMD/pyNNsMD/models/: mlp_eg.py
kernel_example/NNsForMD/pyNNsMD/utils/: loss.py
kernel_example/PyRAI2MD/: setup.py
kernel_example/PyRAI2MD/Tools/: pyproject_bk.toml
kernels/: generator.py  model.py  oracle.py
kernels/PyRAI2MD/: setup.py
script/: bi11-3.sh  bi11-3.txt  bi11-3_samples.sh  bi4-2.sh  bi4-2.txt  bi4-2_err.txt  bi4-6.sh  bi4-6.txt  bi4-6_cleaned.txt  bi4-6_err.txt  bi7-3.sh  bi7-3.txt  parse.py  submit_sequentially.sh  syn.txt  syn_err.txt
usr/: data_process.py  dihedral.py  generator.py  model.py  oracle.py  plot_retrain_trend.sh  res_analysis.py  utils.py
usr/initial_pyg/: bi11-3.py  boot_strap_with_fixed_samples.py  charge_eval.py  check_latent_charge.py  data.py  evaluation.py  full_data_test.py  gradient_to_force.py  plot.py  test_pred.py
usr/initial_pyg/charge_embed_scripts/: bi11-3.sh  bi11-3.txt  bi11-3_samples.sh  bi11-3_samples.txt  bi4-2.sh  bi4-2.txt  bi4-6.sh  bi4-6.txt  bi7-3.sh  bi7-3.txt  bi7-3error.txt
usr/initial_pyg/configs/: mace.yaml  (+5 more)
usr/test/: batch_traj.py  batch_traj_full.py  batch_traj_samples.py  bi11-3.err  bi11-3.out  bi4-2.err  bi4-2.out  bi4-6.err  bi4-6.out  bi7-3.err  bi7-3.out  bisyn_10pstraj_error.txt  bisyn_10pstraj_output.txt  bisyn_200pstraj_output.txt  run_traj.sh  traj.sh  traj_samples.sh
usr_example/: MANIFEST.in  README.md  generator.py  model.py  pyproject.toml  utils.py
usr_example/photoMD/: generator.py  model.py  oracle.py  utils.py
usr_example/photoMD/data/: initial_conditions_small_set.npy
usr_example/photoMD/settings/: generator_setting.py  model_setting.py
usr_example/photoMD/tools/: dft_utils.py  md_tools.py
usr_example/toy_example/: generator.py  model.py  oracle.py
(+307 files in other folders)
