[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "photoMD"
version = "2.1.1"
authors = [
    {name = "Chen Zhou", email = "chen.zhou@kit.edu"},
]
description="Excited states dynamics simulations with Parallel Active Learning (PAL)."
dependencies = ['numpy', "mpi4py", "pyyaml"]
readme = "usr_example/README.md"
requires-python = ">=3.8"

classifiers=[
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Information Analysis",
        "Topic :: Scientific/Engineering :: Physics",
        "Topic :: Scientific/Engineering :: Chemistry",
        "Topic :: Software Development :: Libraries :: Python Modules"
        ]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["toy_example*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"photoMD.data" = ["*.npy"]